--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <div class="left">
-                    <h2 class="main-title">Hey i'm a</h2>  <h2 class="color">photographer </h2><h2 class="main-title"> photorraphar & bloger.</h2>
+                    <h2 class="main-title">Hey i'm a</h2>  <h2 class="color">professional</h2><h2 class="main-title"> photorraphar & bloger.</h2>
                     <p class="left-sub">For dhaka abd outside</p>
                     <div class="container">
                         <div class="contact-item">
