--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 				</div>
 				<div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="img/slider/1.jpg" class="d-block w-100" alt="...">
+				      <img src="img/slider/pexels-1-58267-225157 (1).jpg" class="d-block w-100" alt="...">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/slider/2.jpg" class="d-block w-100" alt="...">
+				      <img src="img/slider/pexels-2-58267-225157 (3).jpg" class="d-block w-100" alt="...">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/slider/3.jpg" class="d-block w-100" alt="...">
+				      <img src="img/slider/pexels-3-58267-225157 (2).jpg" class="d-block w-100" alt="...">
 				    </div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
